WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28949
[Qt] Page content is not displayed in case of HTTP status error
https://bugs.webkit.org/show_bug.cgi?id=28949
Summary
[Qt] Page content is not displayed in case of HTTP status error
Yael
Reported
2009-09-03 08:01:38 PDT
In case of HTTP status error, the web server might still send useful information about the error. If a server sent content, the content should be displayed to the user. Besides, other browsers display that content.
Attachments
Patch
(3.32 KB, patch)
2009-09-03 08:20 PDT
,
Yael
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2009-09-03 08:20:32 PDT
Created
attachment 38991
[details]
Patch If the server sends content with the HTTP status code, display the content instead of throwing an error.
Simon Hausmann
Comment 2
2009-09-03 11:46:45 PDT
Comment on
attachment 38991
[details]
Patch r=me. I would suggest re-positioning the comments though when landing, by keeping the original comment and moving the new comment you added next to the !m_responseDataSent at the end of that line.
Yael
Comment 3
2009-09-03 12:36:19 PDT
Landed in 48028
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug