[Qt] Page content is not displayed in case of HTTP status error https://bugs.webkit.org/show_bug.cgi?id=28949

Patch by Yael Aharon <yael.aharon@nokia.com> on 2009-09-03
Reviewed by Simon Hausmann.

If the server sent content, show it to the user instead of an error,
even if the HTTP status code is not success.

* platform/network/qt/QNetworkReplyHandler.cpp:
* platform/network/qt/QNetworkReplyHandler.h:


Canonical link: https://commits.webkit.org/39604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48028 268f45cc-cd09-0410-ab3c-d52691b4dbfc