WebCore/platform/network/qt/QNetworkReplyHandler.cpp
@@ -135,6 +135,7 @@ QNetworkReplyHandler::QNetworkReplyHandler(ResourceHandle* handle, LoadMode load
     , m_reply(0)
     , m_redirected(false)
     , m_responseSent(false)
+    , m_responseDataSent(false)
     , m_loadMode(loadMode)
     , m_shouldStart(true)
     , m_shouldFinish(false)
@@ -226,8 +227,12 @@ void QNetworkReplyHandler::finish()
         start();
     } else if (m_reply->error() != QNetworkReply::NoError
                // a web page that returns 401/403/404 can still have content
-               && m_reply->error() != QNetworkReply::ContentOperationNotPermittedError
+               && ((m_reply->error() != QNetworkReply::ContentOperationNotPermittedError
                && m_reply->error() != QNetworkReply::ContentNotFoundError
+               && m_reply->error() != QNetworkReply::ProtocolUnknownError
+               && m_reply->error() != QNetworkReply::UnknownContentError)
+               // If the web page sent content, let's give it to the user.
+               || !m_responseDataSent)
                && m_reply->error() != QNetworkReply::AuthenticationRequiredError
                && m_reply->error() != QNetworkReply::ProxyAuthenticationRequiredError) {
         QUrl url = m_reply->url();
@@ -347,8 +352,10 @@ void QNetworkReplyHandler::forwardData()
     if (!client)
         return;
 
-    if (!data.isEmpty())
+    if (!data.isEmpty()) {
+        m_responseDataSent = true;
         client->didReceiveData(m_resourceHandle, data.constData(), data.length(), data.length() /*FixMe*/);
+    }
 }
 
 void QNetworkReplyHandler::start()
@@ -421,6 +428,7 @@ void QNetworkReplyHandler::resetState()
 {
     m_redirected = false;
     m_responseSent = false;
+    m_responseDataSent = false;
     m_shouldStart = true;
     m_shouldFinish = false;
     m_shouldSendResponse = false;
